[package]
name = "rpl"
version = "0.1.3"
authors = ["Rudo2204 <rudo2204@gmail.com>"]
edition = "2018"
description = "Rudo's pack leecher: leech large packs with small machines"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lava_torrent = "0.5"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
anyhow = "1.0"
clap = "2.33.3"
chrono = "0.4.19"
directories = "3.0.2"
fs2 = "0.4.3"
humansize = "1.1.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
thiserror = "1.0"
serde = {version = "1.0", features= ["serde_derive"]}
serde_json = "1.0.64"
derive_builder = "0.10.2"
shellexpand = "2.1.0"
async-trait = "0.1.50"
indicatif = "0.16.2"
derive-getters = "0.2.0"
toml = "0.5.8"
parse-size = "1.0.0"
regex = "1.5.4"
url = "2.2.2"
backoff = { version = "0.3", features = ["futures", "tokio"] }

[profile.release]
panic = "abort"

[[bin]]
name = "pl"
path = "src/main.rs"
